# libhy_log

./: .gitignore  Makefile.am  README.md  build.sh  configure.ac
build-script/pc/pc-chip/: config.sh
build-script/pc/ubuntu/: Makefile.am
example/: Makefile.am  hy_log_demo.c
example/linux/: Makefile.am  hy_log_demo.c
example/mcu/: Makefile.am  hy_log_demo.c
example/mcu/esp32/test-hy_log/: CMakeLists.txt  pytest-hy_log.py
example/mcu/esp32/test-hy_log/main/: CMakeLists.txt  main.c
example/mcu/stm32/stm32h7xx/: hy_log_demo.c
example/windows/: Makefile.am  hy_log_demo.c
include/: Makefile.am  dynamic_array.h  format_cb.h  hy_log.h  hy_printf.h  hy_type.h  log_fifo.h  printf_my.h
include/freertos/: Makefile.am  hy_log.h
include/hy_log/: Makefile.am  dynamic_array.h  format_cb.h  hy_log.h  log_fifo.h  log_private.h  process_handle_data.h  process_single.h  thread_specific_data.h
include/linux/: Makefile.am  dynamic_array.h  format_cb.h  hy_log.h  log.h  log_fifo.h  net.h  thread_specific.h  uart.h
include/linux/hy_log/: Makefile.am  hy_log.h  log.h  log_fifo.h  net.h  process_handle_data.h  thread_specific.h
include/linux/log4cplus/: hy_log.h
include/linux/zlog/: hy_log.h
include/log4cplus/: Makefile.am  hy_log.h
include/mcu/: Makefile.am  hy_log.h
include/mcu/stm32/stm32h7xx/: Makefile.am  hy_log.h
include/windows/: Makefile.am  dynamic_array.h  format_cb.h  hy_log.h  net.h  uart.h
include/zlog/: Makefile.am  hy_log.h
m4/: check_libhy_os_type.m4  check_libzlog.m4  select_log_type.m4  select_vender.m4
res/: Makefile.am  zlog.conf
src/: Makefile.am  dynamic_array.c  format_cb.c  hy_log.c  process_handle_data.c  process_single.c  thread_specific_data.c
src/freertos/: Makefile.am  hy_log.c
src/hy_log/: Makefile.am  dynamic_array.c  format_cb.c  hy_log.c  log_fifo.c  process_handle_data.c  process_single.c  thread_specific_data.c
src/linux/: Makefile.am  dynamic_array.c  hy_log.c  log_fifo.c  net.c
src/linux/hy_log/: Makefile.am  dynamic_array.c  format_cb.c  hy_log.c  log_fifo.c  net.c  process_handle_data.c  process_single.c  thread_specific.c  thread_specific_data.c  uart.c
src/linux/log4cplus/: hy_log4cplus.cpp
src/linux/zlog/: Makefile.am  hy_log.pc.in
src/log4cplus/: Makefile.am
src/mcu/: Makefile.am  hy_log.c
src/mcu/stm32/stm32h7xx/: Makefile.am  hy_log.c
src/windows/: Makefile.am  format_cb.c  hy_log.c  hy_log.pc.in
src/zlog/: Makefile.am  hy_zlog.c
test/: Makefile.am
